# OctaSatSN3

./: .env  .env.example  LICENSE  README.md  main.py  message.txt  pyproject.toml  requirements.txt
db/: creation.sql  index.py  init_db.sh  seeder.py
modules/BME280/: __init__.py  bme280.py
modules/Buzzer/: __init__.py  example.py
modules/GPS/: testing.py
modules/GY91/: __init__.py  gy91.py
modules/LoRa/: listening.py  lora.py  sending.py
server/: api.py
